perfil y arreglando introJs

--- a/proyectoAngular/saboresCompartidos/src/app/contact/contact.component.html
+++ b/proyectoAngular/saboresCompartidos/src/app/contact/contact.component.html
@@ -48,7 +48,7 @@
           </div>
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
-              <label>Mensage</label>
+              <label>Mensaje:</label>
               <textarea rows="5" id="message" required data-validation-required-message="Please enter a message."></textarea>
               <p class="help-block text-danger"></p>
             </div>
