--- a/proyectoAngular/saboresCompartidos/src/app/header/header.component.html
+++ b/proyectoAngular/saboresCompartidos/src/app/header/header.component.html
@@ -43,6 +43,7 @@
           <a routerLink="/registro" routerLinkActive="active" class="nav-op red-button button">Registro</a>
         </div>
         <a routerLink="/perfil" routerLinkActive="active" class="circle-icon google_plus"><i class="fas fa-user"></i></a>
+        <a routerLink="" (click)="startTutorial()" routerLinkActive="active" class="circle-icon google_plus"><i class="fas fa-exclamation"></i></a>
       </div>
     </div>
   </nav>
