--- a/proyectoAngular/saboresCompartidos/src/app/index/index.component.html
+++ b/proyectoAngular/saboresCompartidos/src/app/index/index.component.html
@@ -101,16 +101,17 @@
             <form name="sentMessage" id="contactForm" novalidate>
               <div class="control-group col-md-12">
                 <div class="form-group floating-label-form-group controls">
-                  <input type="email" id="email" placeholder= "Email" required data-validation-required-message="Please enter your email address.">
+                  <input class="floating-label-form-group-input" type="email" id="email" placeholder= "Email" required data-validation-required-message="Please enter your email address.">
                   <p class="help-block text-danger"></p>
                 </div>
+              </div>
+              <div class="text-center">
+                <input type="submit" class="btn-primary" value="Suscríbete">
               </div>
             </form>
         
             <div id="success"></div>
-            <div class="text-center">
-              <button type="submit" class="btn-primary" id="subButton">Subscribete</button>
-            </div>
+            
           </div>
         </div>
       </div>
