--- a/proyectoAngular/saboresCompartidos/src/app/perfil/perfil.component.html
+++ b/proyectoAngular/saboresCompartidos/src/app/perfil/perfil.component.html
@@ -32,5 +32,6 @@
             <span class="space"></span>
         </div>
     </div>
+    <button class="btn-primary margin-top" (click)="logout()">Cerrar sesión</button>
 </div>
 
