--- a/proyectoAngular/saboresCompartidos/src/app/noticia/noticia.component.html
+++ b/proyectoAngular/saboresCompartidos/src/app/noticia/noticia.component.html
@@ -7,7 +7,7 @@
         <h2 id="ArtTitle" >{{noticia.title}}</h2>
       </div>
       <div class="image-container">
-        <img src = "https://saborescompartidos.herokuapp.com{{noticia['image']}}" alt="noticia_chef">
+        <img src = "{{noticia['image']}}" alt="noticia_chef">
       </div>
     </div>
   </div>
