--- a/proyectoAngular/saboresCompartidos/src/app/nueva-receta/nueva-receta.component.css
+++ b/proyectoAngular/saboresCompartidos/src/app/nueva-receta/nueva-receta.component.css
@@ -1,3 +1,27 @@
 @import '../../assets/css/recipe.css';
 @import '../../assets/css/bs-stepper.css';
 @import '../../assets/css/bs-stepper.min.css';
+
+.bs-stepper-header{
+    overflow: auto;
+    
+    
+}
+
+.bs-stepper-header::-webkit-scrollbar {
+    display: none;
+  }
+
+label{
+    margin-right: 40px;
+    margin-bottom: 8px;
+    
+}
+
+label.textarea{
+    width: 95%;
+}
+
+textarea{
+    height: 14% !important;
+}
