--- a/proyectoAngular/saboresCompartidos/src/app/nueva-receta/nueva-receta.component.html
+++ b/proyectoAngular/saboresCompartidos/src/app/nueva-receta/nueva-receta.component.html
@@ -150,7 +150,7 @@
                     <br><br>
                     <p id = "contenidoOutput"> </p>
                     <br><br>
-                    <button class="btn btn-primary" (click)="alert('Se ha agregado la receta')">Confirmar</button>
+                    <button class="btn btn-primary" (click)="enviar()">Confirmar</button>
                     <button class="btn btn-primary" (click)="stepper1.previous()">Anterior</button>
                   </div>
               </div>
